# xresource_mgr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: xresource_mgr.cpp  xresource_mgr.h
source/bridges/: xresource_bridge_xproperty.h
source/unit_test/: main.cpp  xresource_mgr_unit_test_example01.cpp  xresource_mgr_unit_test_example01.h
src/: xresource_mgr.h
src/UnitTests/: TestGuids.h  TestResourceMgr.h  resource_mgr_grader.cpp
